--- a/src/template.html
+++ b/src/template.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TEMPLATE</title>
+    <title>Odin Battleships</title>
   </head>
 
   <body>
+    <section class="announce-section">
+      <h1 id="announcement">ANNOUNCEMENT</h1>
+    </section>
     <section class="game-section">
       <div class="gameboard-wrapper">
         <h2>PLAYER</h2>
@@ -258,6 +261,10 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="button-section">
+      <div id="randomise-btn">RANDOMISE SHIPS</div>
+      <div id="start-btn">START GAME</div>
     </section>
   </body>
 </html>
