feat: add announce and btn section to HTML

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+    <section class="announce-section">
+      <h1>ANNOUNCEMENT</h1>
+    </section>
     <section class="game-section">
       <div class="gameboard-wrapper">
         <h2>PLAYER</h2>
@@ -258,6 +261,10 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="button-section">
+      <div id="randomise-btn">RANDOMISE SHIPS</div>
+      <div id="start-btn">START GAME</div>
     </section>
   </body>
 </html>
