feat: change announcement ID

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 
   <body>
     <section class="announce-section">
-      <h1>ANNOUNCEMENT</h1>
+      <h1 id="announcement">ANNOUNCEMENT</h1>
     </section>
     <section class="game-section">
       <div class="gameboard-wrapper">
